Fixed simple error in SyllableSplitter and added some classes for WordModel

--- a/GeorgianLanguageClasses/GeorgianLanguageClasses.csproj
+++ b/GeorgianLanguageClasses/GeorgianLanguageClasses.csproj
@@ -32,11 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsonantPhoneticSimilarity.cs" />
@@ -46,6 +41,7 @@
     <Compile Include="GeoWordMatcher.cs" />
     <Compile Include="GeorgianTextParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WordModel\Word.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
