--- a/GeorgianLanguageClassesTests/GeorgianLanguageClassesTests.csproj
+++ b/GeorgianLanguageClassesTests/GeorgianLanguageClassesTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="GeorgianWordExtensionsTests.cs" />
     <Compile Include="GeoWordMatcherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WordModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeorgianLanguageClasses\GeorgianLanguageClasses.csproj">
